common-applications/test-environment/om-webserver-xihe-test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com *.googleapis.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
      if ($http_origin ~ '^https:\/\/xihe\.mindspore\.cn$') {
        set $allow_origin $http_origin;  
      }
      if ($http_origin ~ '^https:\/\/xihe2\.test\.osinfra\.cn$') {
        set $allow_origin $http_origin;  
      }
      more_set_headers "Access-Control-Allow-Origin: $allow_origin";
      more_set_headers "Access-Control-Allow-Credentials: true";
      more_set_headers "Access-Control-Allow-Methods: GET, PUT, POST, DELETE,PATCH, OPTIONS";
  name: om-webserver-ingress
  namespace: om-webserver-xihe-test
spec:
  tls:
    - hosts:
        - xiheapi.test.osinfra.cn
      secretName: tls-secrets
  rules:
  - host: xiheapi.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: om-webserver-service
            port:
              number: 80
  ingressClassName: nginx
